--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "^15.2.4",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-hot-toast": "^2.6.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
